# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//apps/component_manager/component.gni")

fuchsia_component("component_manager") {
  manifest = "component_manager.json"

  sources = [
    "component_manager_impl.cc",
    "component_manager_impl.h",
    "fake_network.cc",
    "fake_network.h",
    "main.cc",
  ]

  deps = [
    "//apps/component_manager/interfaces",
    "//apps/network",
    "//apps/network/interfaces",
    "//lib/ftl",
    "//lib/mtl",
    "//mojo/public/cpp/application",
    "//mojo/public/cpp/bindings",
    "//mojo/public/interfaces/application",
    "//mojo/public/interfaces/network",
    "//mojo/system",
    "//third_party/rapidjson",
  ]

  libs = [ "mxio" ]
}
