# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")

executable("component_manager_program") {
  sources = [
    "component_manager_impl.cc",
    "component_manager_impl.h",
    "fake_network.cc",
    "fake_network.h",
    "main.cc",
  ]

  deps = [
    "//apps/component_manager/services",
    "//apps/component_manager/services:format",
    "//apps/modular/lib/app",
    "//apps/network/services",
    "//lib/ftl",
    "//lib/mtl",
    "//third_party/rapidjson",
  ]

  libs = [ "mxio" ]
}

executable("components_main") {
  sources = [
    "components_main.cc",
  ]

  deps = [
    "//apps/component_manager/services",
    "//apps/component_manager/services:format",
    "//apps/modular/lib/app",
    "//lib/ftl",
    "//lib/mtl",
  ]
}

fuchsia_component("component_manager") {
  manifest = "component_manager.json"
  program = ":component_manager_program"
}
