# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")

executable("component_manager_main") {
  sources = [
    "cache.cc",
    "cache.h",
    "component_index_impl.cc",
    "component_index_impl.h",
    "component_manager_main.cc",
    "component_resources_impl.cc",
    "component_resources_impl.h",
  ]

  deps = [
    "//apps/component_manager/services",
    "//apps/modular/lib/app",
    "//apps/network/services",
    "//lib/ftl",
    "//lib/mtl",
    "//lib/url",
    "//third_party/rapidjson",
  ]

  libs = [ "mxio" ]
}

executable("components_main") {
  sources = [
    "components_main.cc",
  ]

  deps = [
    "//apps/component_manager/services",
    "//apps/modular/lib/app",
    "//lib/ftl",
    "//lib/mtl",
    "//third_party/rapidjson",
  ]
}

fuchsia_component("component_manager") {
  manifest = "component_manager.json"
  program = ":component_manager_main"
}
