# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//lib/fidl/fidl.gni")

fidl("services") {
  sources = [
    "component.fidl",
  ]
  public_deps = [
    "//apps/modular/services/application",
    "//apps/network/services",
  ]
}

source_set("format") {
  sources = [
    "format.h",
    "format.cc",
  ]

  deps = [
    ":services",
    "//third_party/rapidjson",
  ]
}
