# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//apps/component_manager/component.gni")

fuchsia_component("hello_component") {
  manifest = "hello_component.json"

  deps = [
    "//apps/component_manager/interfaces",
    "//lib/ftl",
    "//mojo/public/c:system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/system",
  ]

  sources = [
    "hello_component.cc",
  ]
}
