# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//apps/component_manager/component.gni")

executable("hello_program") {
  deps = [
    "//apps/component_manager/interfaces",
    "//lib/ftl",
    "//lib/mtl",
    "//mojo/public/cpp/application",
    "//mojo/system",
  ]

  sources = [
    "hello_component.cc",
  ]
}

fuchsia_component("hello_component") {
  manifest = "hello_component.json"
  program = ":hello_program"
}
