# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("request_components") {
  deps = [
    "//apps/component_manager/interfaces",
    "//lib/ftl",
    "//lib/mtl",
    "//mojo/public/cpp/application",
    "//mojo/system",
  ]

  sources = [
    "request_components.cc",
  ]
}
